---
source: tests/lexer.rs
description: "`\n{\n    stuff\n}`\n\n`\nstuff"
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    MultiLineStringLiteral("`\n{\n    stuff\n}`") at Location { line: 0, col: 0 },
    UnfinishedMultiLineStringLiteral("`\nstuff") at Location { line: 5, col: 0 },
]
